[package]
name = "pugl-sys"
version = "0.4.1"
authors = ["Johannes Mueller <github@johannes-mueller.org>"]
edition = "2018"
description = "A Rust wrapper for pugl"
license = "ISC"
keywords = ["GUI", "LV2"]
categories = ["api-bindings", "gui"]
homepage = "https://github.com/johannes-mueller/pugl-sys"
repository = "https://github.com/johannes-mueller/pugl-sys"
readme = "README.md"

[features]
testing = []

[dependencies]
bitflags = "1.2.1"
cairo-rs = "0.9.1"
cairo-sys-rs = "0.10.0"

serial_test = "0.5.0"

[build-dependencies]
bindgen = "0.55.1"
